<resources>
    <string name="app_name">Circlen</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--REGISTRATION PROCESS-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_join_us">Join us</string>
    <string name="tv_welcome_back">Welcome back</string>
    <string name="tv_join_us_description">Huh, ready to navigate?</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="tv_have_an_account">Already have an account?</string>
    <string name="tv_no_account_yet">Don\'t have an account yet?</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="error_email">Oop, we need your email address</string>
    <string name="error_name">Oop, what\'s your name?</string>
    <string name="error_surname">Oops, what\'s your family name?</string>
    <string name="error_phone_number">Oops, what\'s your phone number?</string>
    <string name="error_password">Oop, please set a password</string>
    <string name="txt_logo">CIRCLEn</string>
    <string name="txt_title_welcome">Oh hey!</string>
    <string name="txt_desc_welcome">Welcome to localization monitoring platform of University Politehnica of Bucharest.</string>
    <string name="txt_title_welcome2">Navigate indoor.</string>
    <string name="txt_desc_welcome2">Don\'t miss any valuable knowledge by being late to your classes, we mean it.</string>
    <string name="txt_title_welcome3">But first,</string>
    <string name="txt_desc_welcome3">Please sign up with your University email address, and verify your email address to start using our platform.</string>

    <!--DRAWER NAVIGATION-->
    <string name="drawer_controller_open">open</string>
    <string name="drawer_controller_close">close</string>
    <string name="tv_morning">Good morning,</string>
    <string name="tv_afternoon">Good afternoon,</string>
    <string name="tv_evening">Good evening,</string>
    <string name="tv_night">Good night,</string>

    <!--PROFILE-->
    <string name="txt_contact_info">Contact info</string>

    <!--SETTINGS-->
    <string name="txt_profile_details">Profile details</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_save">SAVE</string>

    <!--SPLASH-->
    <string name="txt_splash">SPLASH</string>

    <!--DRAWER NAVIGATION-->
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rewards">Attendance</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_localization">Localizations</string>
    <string name="menu_terms_and_privacy">Terms and Conditions / Privacy</string>

    <!--BOTTOM SHEET-->
    <string name="txt_nice_to_see_you">Nice to see you again</string>
    <string name="txt_what_you_looking">What are you looking for?</string>

    <!--VERIFICATION STATUS OVERLAY-->
    <string name="txt_okay_i_understand">OK, I understand</string>
    <string name="txt_moderation_status">Verification status</string>
    <string name="txt_moderation_status_content">Hello. We just have sent a verification email to your email address.\n\nPlease, verify your email address to have an access to our platform.</string>
    <string name="txt_thank_you">Have a good day!</string>

    <!--SEARCH WIDGET-->
    <string name="hint_search">Search Xerox, coffee machine…</string>
    <string name="app_label">Localization</string>

    <!--REWARD MENU-->
    <string name="txt_reward_title">Scan for reward</string>
    <string name="txt_reward_subtitle">Scan the QR code provided by Lecturer to get +1 for attendance list.</string>
    <string name="btn_lets_get_started">Let\'s get started</string>
    <string name="btn_start_scanning">Start scanning</string>
    <string name="txt_scan_qr">Scan QR code</string>
    <string name="desc_reward_img">Scan Qr code</string>

    <!-- GOOGLE MAPS -->
    <string name="google_maps_api_key">AIzaSyDNdGlIl6_B0CtCOcxeVFddBNUIWDGgDSU</string>

    <!-- MAIN MENU -->
    <string name="desc_reset_map">Reset Map description</string>
    <string name="txt_bluetooth_disabled">Bluetooth disabled</string>
    <string name="txt_location_disabled">Location disabled</string>
    <string name="action_enabled">Enable</string>

    <!-- BEACON GRAPH -->
    <string name="title_chart">Chart</string>
    <string name="axis_label_time">Time in seconds</string>
    <string name="axis_label_rssi">RSSI in dBm</string>
    <string name="axis_label_rssi_filtered">Filtered RSSI in dBm</string>
    <string name="axis_label_distance">Distance in meters</string>
    <string name="axis_label_frequency">Frequency in Hz</string>
    <string name="axis_label_variance">Variance in dBm</string>

    <!-- GRAPH MENU-->
    <string name="menu_color">Coloring</string>
    <string name="menu_color_by_instance">Instances</string>
    <string name="menu_color_by_type">Types</string>
    <string name="menu_color_by_property">Properties</string>
    <string name="menu_value">Value</string>
    <string name="menu_value_rssi">RSSI</string>
    <string name="menu_value_rssi_filtered">RSSI (Filtered)</string>
    <string name="menu_value_distance">Distance</string>
    <string name="menu_value_frequency">Frequency</string>
    <string name="menu_value_variance">Variance</string>
</resources>