<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>
        <item android:id="@+id/menu_localization"
            android:icon="@drawable/ic_local"
            android:title="@string/menu_localization"/>
        <item android:id="@+id/menu_reward"
            android:icon="@drawable/ic_gift"
            android:title="@string/menu_rewards"/>
    </group>

    <item android:title="@string/menu_settings">
        <menu>
            <group android:id="@id/settings"
                android:checkableBehavior="single">
                <item android:id="@+id/menu_terms"
                    android:title="@string/menu_terms_and_privacy"/>
                <item android:id="@+id/menu_logout"
                    android:title="@string/menu_logout"/>
            </group>
        </menu>
    </item>

</menu>