<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".rewards.MainReward">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_15_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_scan_qr"
        android:textSize="@dimen/twenty"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_15_horizontal" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:text="@string/txt_reward_subtitle"
        android:gravity="center"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:src="@drawable/qr_scan_characters"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        android:contentDescription="@string/desc_reward_img" />

    <Button
        android:id="@+id/btn_scan_scanning"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/button_shape"
        android:text="@string/btn_start_scanning"
        android:textAllCaps="false"
        android:layout_marginBottom="56dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>